# kiril

./: Cargo.toml  README.md  TODO
examples/: eww.scss  eww.yuck
src/: dbus.rs  json.rs  lrc.rs  main.rs  playerfind.rs
src/lrc/: find.rs  parse.rs
