[package]
name = "kiril"
version = "0.1.0"
edition = "2024"

[dependencies]
async-std = "1.13.2"
base64 = "0.22.1"
dbus = "0.9.7"
mpris = "2.0.1"
regex = "1.12.1"
serde = {version = "1.0.219", features = ["derive"]}
serde_json = "1.0.140"
tokio = { version = "1.47.1", features = ["full"] }
urlencoding = "2.1.3"
